--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <h1>TUNAHAN TUUUUT</h1>
 <h1>MEĞĞĞMEDE SOKSUM</h1>
+<h1>AAĞĞMEDE BASIYIM</h1>
+<h1>TAŞAK11</h1>
+<h1>TAŞAKÇI</h1>
 </body>
 
 </html>
